Add test enpoint with GET
