# src/main/api/api.yaml
@@ -12,6 +12,51 @@ tags:
 - name: developers
   description: Operations available to regular developers
 paths:
+  /lti:
+    get:
+      summary: Display LTI results for students
+      description: |
+        By passing in custom_canvas_course_id you get the LTI HTML page
+      x-exegesis-controller: hangoutController
+      operationId: ltiHtmlTest
+      parameters:
+      - name: course_id
+        in: query
+        description: Canvas Course ID to get Google Meet for
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: search results matching criteria
+          content:
+            text/html:
+              schema:
+                type: string
+        "400":
+          description: Class Code not specified
+    post:
+      summary: Display LTI results for students
+      description: |
+        By passing in custom_canvas_course_id you get the LTI HTML page
+      x-exegesis-controller: hangoutController
+      operationId: ltiHtml
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+      responses:
+        "200":
+          description: search results matching criteria
+          content:
+            text/html:
+              schema:
+                type: object
+        "400":
+          description: Class Code not specified
   /hangout/url:
     post:
       tags:
